--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ h3 {
 }
 
 p {
-  @apply text-white/90 text-[17px] md:text-[19px] leading-[26px];
+  @apply text-white/90 text-[17px] md:text-[19px] leading-[27px] md:leading-[29px];
 }
 
 .page-space-x {
